# ANIME-RECOMMENDER

./: .dockerignore  .gitignore  Dockerfile  llmops-k8.yaml  pyproject.toml
app/: app.py
config/: config.py
pipeline/: build_pipeline.py  pipeline.py
src/: data_loader.py  prompt_template.py  recommender.py  vector_store.py
utils/: exception.py  logger.py
